--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.516.0",
     "react": "^19.1.0",
     "react-router": "^7.6.2",
     "styled-components": "^6.1.18"
